# PythonProject1

./: .flake8  README.md  pyproject.toml  test_log.txt
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_masks_py.html  z_145eef247bfb46b6_processing_py.html  z_145eef247bfb46b6_widget_py.html
src/: bank_utils.py  decorators.py  generators.py  main.py  masks.py  processing.py  transaction_processor.py  utils.py  widget.py
tests/: conftest.py  test_bank_utils.py  test_code.py  test_decorators.py  test_generators.py  test_main.py  test_masks.py  test_processing.py  test_transaction_processor.py  test_utils.py  test_widget.py
