[tool.poetry]
name = "pythonproject1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.32.4"
python-dotenv = "^1.1.1"
transaction = "^5.0"


[tool.poetry.group.lint.dependencies]
mypy = "^1.16.1"
flake8 = "^7.2.0"
black = "^25.1.0"
isort = "^6.0.1"




[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = 'venv'
disable_error_code = ["duplicate-module"]

[tool.black]
line-length = 119
exclude = '''(/(\.git)/)'''

[tool.isort]
line_length = 119

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
